<resources>
    <string name="app_name">I ♥ Brussels Comics</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="comics">COMICS</string>
    <string name="ByAuthors"><![CDATA[By Sabah, Leander & Steven]]></string>
    <string name="test">Comics2</string>
    <string name="nav_about">about</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_info">Info</string>
    <string name="str_tv_context_about">Het stripparcours ontstond aan het begin van de jaren 90. De Stad Brussel ging toen in tegen de grote publicitaire affiches die het stadscentrum vervuilden. Alleen: toen die affiches eenmaal verwijderd waren, bleven er verwaarloosde muren achter die om restauratie smeekten. Zo ontstond de eerste stripmuur: het personage Ragebol van de Brusselse striptekenaar Frank Pé in de Plattesteenwijk. Een mooi initiatief waar kunst stadsvernieuwing ontmoet, en dat meteen opvolging kreeg. Een paar Brusselse auteurs mochten aan de slag op stadsmuren van de hoofdstad.

Door de jaren heen werd het parcours rijker en geschakeerder, werkten niet-Brusselse Belgische auteurs mee… En toen kwamen ook de buitenlandse auteurs - Hugo Pratt, Zep, Dupuy-Berberian, Uderzo, Mezzo zijn er een paar van - die ook deel uitmaken van de enorme invloedsfeer van de Belgisch-Franse striptraditie.

Van Kuifje tot Robbedoes over Corto Maltese, Lucky Luke, Yoko Tsuno, Natasha, Asterix… Goed zestig personages kleuren vandaag de muren op een wandeling die de toeristenstraatjes verlaat en u een kant van Brussel laat ontdekken vol charme en authenticiteit. Vandaag ontwikkelt het stripparcours zich nog verder. De wereld van de strips is diverser geworden, en het stripparcours moderniseert mee. Graphic novels en niches veroveren de muren met artiesten zoals Nix, Dominique Goblet, Brecht Evens</string>
    <string name="tv_context">Context</string>
    <string name="tv_agenda">Stripfeest 2020

        Op vrijdag 11,zaterdag 12 en zondag 13 september 2020, in Tour en Taxis (Gare Maritime).

Brussel viert de strips met een heel weekend rond stripverhalen. Op het programma: Balloon \'s Day Parade, conferenties, shows, signeersessies,…</string>

    <string name="str_tv_oproepMuren">Bent u eigenaar van een pand op het grondgebied van Stad Brussel en wilt u graag een stripmuur op een muur van uw gebouw? Neem contact op om te zien of een stripmuur bij u mogelijk is via:

 stripparcours@brucity.be</string>
    <string name="str_tv_title_about">Geschiedenis van het stripparcours</string>
    <string name="str_tv_title_oproepMuren">Oproep voor muren</string>
    <string name="str_tv_appNaam">Co m ic     -   Sense</string>
    <string name="str_tv_inleiding">De Stad Brussel vindt de rijke en levendige Belgische striptraditie heel belangrijk. Al sinds de jaren 90 krijgen personages en auteurs uit de Belgisch-Franse striptraditie een prominente plek in het Brussels stadslandschap. Bijna zestig stripmuren kleuren Brussel-centrum en Laken.
    Ondek ze in onze app Comic Sense</string>


</resources>
