<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_location_searching_black_24dp"
        android:title="@string/map"/>
    <item
        android:id="@+id/nav_list"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/list" />
    <item
        android:id="@+id/nav_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_info" />
</menu>