<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".fragments.HomeFragment">

    <ImageView
        android:id="@+id/sideBarIndicator"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:background="@drawable/side_burger_shape"
        android:paddingBottom="50dp"
        android:rotation="90"
        android:scaleType="fitXY"
        android:src="@drawable/ic_drag_handle_black_24dp"
        android:tint="@color/common_google_signin_btn_text_light_default"
        android:translationX="-70dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:tintMode="src_in" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="29dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo_iv"
                android:layout_width="240dp"
                android:layout_height="114dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_large"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_ib"
                app:tintMode="src_in" />

            <TextView
                android:id="@+id/subject_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="70dp"
                android:layout_marginRight="70dp"
                android:text="@string/comics"
                android:textColor="@color/colorSecondary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_iv" />

            <ImageButton
                android:id="@+id/about_ib"
                android:layout_width="259dp"
                android:layout_height="230dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorPrimaryLight"
                android:scaleType="fitCenter"
                android:src="@drawable/news"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_inleiding" />

            <TextView
                android:id="@+id/tv_inleiding"
                android:layout_width="267dp"
                android:layout_height="156dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:overScrollMode="ifContentScrolls"
                android:text="@string/str_tv_inleiding"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_appNaam"
                android:layout_width="33dp"
                android:layout_height="699dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:text="@string/str_tv_appNaam"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorSecondary"
                android:textSize="45sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toStartOf="@+id/tv_inleiding"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>